--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3516,8 +3516,9 @@ span {
     margin-left: 0;
   }
   .hero-1 .hero-image img {
-    width: 100%;
-    height: 100%;
+  height: 400px;
+    /* fijo */
+    display: flex;
   }
 }
 .hero-1 .hero-image .bg-shape {
@@ -3938,8 +3939,8 @@ span {
   z-index: 9;
 }
 .hero-3 .hero-image img {
-  width: 100%;
-  height: 100%;
+height: 400px;
+  display: flex;
 }
 
 .mean-container a.meanmenu-reveal {
